# graavity_io

./: .env  .gitignore  .pact-history  .repos  README.md  dbfile  default.nix  example.pact  example.yaml  flake.nix  graavity.cabal  graavitylient.sh  init.sql  nuchain.cabal  overrides.nix  project.nix  sampleConfig.yaml  stack.yaml
conf/: 10000-cluster.yaml  10001-cluster.yaml  10002-cluster.yaml  10003-cluster.yaml  admin0-keypair.yaml  atomizer.json  client.yaml  sentinel.json  shards.json
demo/: run-inserts.sh  start-no-persistence.sh  start.sh
demoui/: header-nav.js  index.js
docker/: centos6-base.Dockerfile  centos6-build.Dockerfile  ubuntu-base.Dockerfile  ubuntu-build.Dockerfile
executables/: Atomizer.hs  GenerateConfigFiles.hs  NuchainServer.hs  Sentinel.hs  Shard.hs  Validator.hs  WatchTower.hs  graavityClient.hs  graavityServer.hs
executables/inserts/: Main.hs
graavity-beta/docs/: Graavity-README.md  Grafana-README.md
graavity-beta/todomvc/: index.html
monitor/: grafana-dashboard.json  prometheus.yml
nix/: deployment-notes.md
nix/conf/: 10000-cluster.yaml  10001-cluster.yaml  10002-cluster.yaml  10003-cluster.yaml  graavityclient.sh
nuchain-beta/docs/: Nuchain-README.md
nuchain-beta/todomvc/: index.html
queries/: fetch_block.sql
scripts/: build-beta-distro.sh  connect-to-r3.sh  create_aws_confs.sh  servers.sh  setup-aws.sh  setup-ubuntu-base.sh
scripts/aws/: Ansible-README.md  ansible_vars.yml  edit_conf.yml  get_server_logs.yml  run_servers.yml  start_aws_demo.sh  start_instances.yml  stop_instances.yml
src/Apps/Nuchain/: Client.hs
src/Apps/graavity/: Client.hs  Server.hs
src/Nuchain/: Command.hs
src/Nuchain/Consensus/Handle/: AppendEntries.hs  Command.hs
src/Nuchain/Consensus/Raft/: Client.hs  Common.hs  Main.hs  Node.hs  RaftExampleT.hs  SocketClient.hs  SocketNode.hs  Store.hs
src/Nuchain/Evidence/: Spec.hs
src/Nuchain/Execution/: ConfigChange.hs  Pact.hs
src/Nuchain/HTTP/: ApiServer.hs
src/Nuchain/History/: Persistence.hs
src/Nuchain/Log/: Persistence.hs
src/Nuchain/Messaging/: ZMQ.hs
src/Nuchain/Messaging/Turbine/: General.hs
src/Nuchain/Monitoring/: Server.hs
src/Nuchain/Spec/: Simple.hs
src/Nuchain/Types/: Base.hs  Command.hs  Comms.hs  Crypto.hs  Entity.hs  HTTP.hs  PactDB.hs  Private.hs  Spec.hs
src/Nuchain/Types/Message/: AER.hs  RVR.hs  Signed.hs
src/Nuchain/Util/: SeedPhrase.hs
src/Pact/Persist/: CacheAdapter.hs  WriteBehind.hs
src/graavity/: Command.hs  Config.hs  ConfigChange.hs  Event.hs  Log.hs  Message.hs  Types.hs
src/graavity/Config/: ClusterMembership.hs  TMVar.hs
src/graavity/ConfigChange/: Util.hs
src/graavity/Consensus/: Handle.hs  Publish.hs  Service.hs  Util.hs
src/graavity/Consensus/Handle/: AppendEntries.hs  Command.hs  ElectionTimeout.hs  HeartbeatTimeout.hs  RequestVote.hs  RequestVoteResponse.hs
src/graavity/Consensus/Raft/: Client.hs  Common.hs  Main.hs  Node.hs  RaftExampleT.hs  SocketClient.hs  SocketNode.hs  Store.hs
src/graavity/Evidence/: Service.hs  Spec.hs
src/graavity/Execution/: ConfigChange.hs  Pact.hs  Service.hs
src/graavity/HTTP/: ApiServer.hs
src/graavity/History/: Persistence.hs  Service.hs
src/graavity/Log/: LogApi.hs  Persistence.hs  Service.hs  Types.hs
src/graavity/Messaging/: Turbine.hs  ZMQ.hs
src/graavity/Messaging/Turbine/: AER.hs  General.hs  NewCMD.hs  RV.hs  Util.hs
src/graavity/Monitoring/: EkgJson.hs  EkgMonitor.hs  EkgSnap.hs  Server.hs
src/graavity/PreProc/: Service.hs
src/graavity/Private/: Private.hs  Service.hs  Simulate.hs
src/graavity/Sender/: Service.hs
src/graavity/Spec/: Simple.hs
src/graavity/Types/: Base.hs  Command.hs  Comms.hs  Config.hs  ConfigChange.hs  Crypto.hs  Dispatch.hs  Entity.hs  Event.hs  Evidence.hs  Execution.hs  HTTP.hs  History.hs  Log.hs  Message.hs  Metric.hs  PactDB.hs  PreProc.hs  Private.hs  Sender.hs  Spec.hs  Turbine.hs
src/graavity/Types/Message/: AE.hs  AER.hs  NewCMD.hs  RV.hs  RVR.hs  Signed.hs
src/graavity/Util/: SeedPhrase.hs  Util.hs
static/monitor/: bundle.js  index.html
tests/: ConfigChangeFileSpec.hs  ConfigChangeSpec.hs  ConfigSpec.hs  EvidenceSpec.hs  LogSpec-Disabled.hs  WireFormatSpec.hs
tests/Util/: TestRunner.hs
